src/objects/Apttus_Billing__InvoiceRunResult__c.object
<CustomObject>
    <description>Shows the list of invoices created by an associated invoice run.</description>
    <fields>
        <fullName>Apttus_Billing__AccountsWithInvoicesGenerated__c</fullName>
        <description>The number of accounts with invoice(s) generated as result of this invoice run.</description>
        <inlineHelpText>The number of accounts with invoice(s) generated as result of this invoice run.</inlineHelpText>
        <label>Accounts with Invoices generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AccountsWithoutCreditMemosGenerated__c</fullName>
        <description>The number of accounts considered for this invoice run but no Credit Memo generated.</description>
        <inlineHelpText>The number of accounts considered for this invoice run but no Credit Memo generated.</inlineHelpText>
        <label>Accounts Without Credit Memos Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AccountsWithoutInvoicesGenerated__c</fullName>
        <description>The number of accounts considered for this invoice run but no invoices generated.</description>
        <inlineHelpText>The number of accounts considered for this invoice run but no invoices generated.</inlineHelpText>
        <label>Accounts  Without Invoices Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AccountswithCreditMemosGenerated__c</fullName>
        <description>The number of accounts with Credit Memo(s) generated as result of this invoice run.</description>
        <inlineHelpText>The number of accounts with Credit Memo(s)  generated as result of this invoice run.</inlineHelpText>
        <label>Accounts with Credit Memos Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceRunId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Invoice Run Id.</description>
        <inlineHelpText>The associated Invoice Run Id.</inlineHelpText>
        <label>Invoice Run Id</label>
        <referenceTo>Apttus_Billing__InvoiceRun__c</referenceTo>
        <relationshipLabel>Invoice Run Results</relationshipLabel>
        <relationshipName>Invoice_Run_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ScheduleJobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The job Id of the associated Schedule Job.</description>
        <inlineHelpText>The job Id of the associated Schedule Job.</inlineHelpText>
        <label>Schedule Job Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>Holds the status of the current scheduled job run.</description>
        <inlineHelpText>Holds the status of the current scheduled job run.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxCallbackStatus__c</fullName>
        <description>Invoice callback status to denote the status of the callback Actions (Tax Calculation, Invoice Filter etc) on Invoice creation.</description>
        <inlineHelpText>Invoice callback status to denote the status of the callback Actions (Tax Calculation, Invoice Filter etc) on Invoice creation.</inlineHelpText>
        <label>Callback Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalAccountsSelected__c</fullName>
        <description>The total number of accounts included in this invoice run.</description>
        <inlineHelpText>The total number of accounts included in this invoice run.</inlineHelpText>
        <label>Total Accounts Selected</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalCreditMemosApplied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number Credit Memos automatically applied to unpaid Invoices.</description>
        <inlineHelpText>The number Credit Memos automatically applied to unpaid Invoices created by the
Invoice Run.</inlineHelpText>
        <label>Total Credit Memos Applied</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalCreditMemosAutoApproved__c</fullName>
        <description>The number of total Credit Memos auto approved as a result of this Invoice Run.</description>
        <inlineHelpText>The number of total Credit Memos auto approved as a result of this Invoice Run.</inlineHelpText>
        <label>Total Credit Memos Auto Approved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalCreditMemosGenerated__c</fullName>
        <description>The number of total Credit Memos generated as a result of this invoice run.</description>
        <inlineHelpText>The number of total Credit Memos generated as a result of this invoice run.</inlineHelpText>
        <label>Total Credit Memos Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoicesAutoApproved__c</fullName>
        <description>The number of total invoices auto approved as a result of this invoice run.</description>
        <inlineHelpText>The number of total invoices auto approved as a result of this invoice run.</inlineHelpText>
        <label>Total Invoices Auto Approved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoicesCredited__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Invoices automatically paid down with Credit Memos.</description>
        <inlineHelpText>The number of Invoices automatically paid down with Credit Memos.</inlineHelpText>
        <label>Total Invoices Credited</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoicesGenerated__c</fullName>
        <description>The number of total invoices generated as a result of this invoice run.</description>
        <inlineHelpText>The number of total invoices generated as a result of this invoice run.</inlineHelpText>
        <label>Total Invoices Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoicesSupressed__c</fullName>
        <description>The number of total invoices suppressed as a result of this invoice run.</description>
        <inlineHelpText>The number of total invoices suppressed as a result of this invoice run.</inlineHelpText>
        <label>Total Invoices Supressed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Run Result</label>
    <listViews>
        <fullName>Apttus_Billing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Run Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Run Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>